# sports-alerts-platform

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  sports_alerts_v1_plan.md
.github/: CODEOWNERS
docs/: architecture.md  roadmap.md  (+6 more)
services/api/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py  0002_add_game_odds_current.py  0003_email_magic_link_auth.py  0004_roles_and_api_usage_telemetry.py
services/api/app/: config.py  deps.py  main.py
services/api/app/core/: security.py
services/api/app/db/: models.py  session.py
services/api/app/routers/: alerts.py  auth.py  follows.py  games.py  ops.py  preferences.py  teams.py
services/api/app/schemas/: alert.py  auth.py  follow.py  game.py  ops.py  preference.py  team.py
services/api/app/services/: api_usage.py  magic_link_delivery.py  odds.py  seed.py
services/api/tests/: conftest.py  test_alert_history.py  test_alerts_dev.py  test_auth.py  test_data_constraints.py  test_follows_preferences.py  test_games.py  test_migrations_smoke.py  test_ops.py
services/worker/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
services/worker/tests/: conftest.py  test_delivery.py  test_ingest_cycle.py  test_planner.py  test_provider_contract.py
services/worker/worker/: config.py  db.py  delivery.py  ingest.py  main.py  odds.py  planner.py
services/worker/worker/loops/: __init__.py  delivery_loop.py  ingest_loop.py
services/worker/worker/providers/: balldontlie.py  base.py  factory.py
(+23 files in other folders)
