[project]
name = "sports-alerts-api"
version = "0.1.0"
description = "FastAPI backend for Sports Alerts Platform"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.3",
    "email-validator>=2.2.0",
    "fastapi==0.115.0",
    "psycopg[binary]==3.2.3",
    "pydantic-settings==2.5.2",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.30.6",
]

[dependency-groups]
dev = [
    "httpx==0.27.2",
    "pytest==8.3.3",
]

[tool.uv]
package = false
