[project]
name = "sports-alerts-worker"
version = "0.1.0"
description = "Background worker for Sports Alerts Platform"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.27.2",
    "pydantic-settings==2.5.2",
    "psycopg[binary]==3.2.3",
    "sqlalchemy==2.0.35",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
]

[tool.uv]
package = false
